Zabbix manifests/kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix-bft
  labels:
    name: zabbix
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  labels:
    app: zabbix
  namespace: zabbix-bft
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: web-http
  - port: 443
    targetPort: 8443
    name: web-https
  selector:
    name: zabbix-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  labels:
    app: zabbix
  namespace: zabbix-bft
spec:
  ports:
  - port: 10051
    targetPort: 10051
    nodePort: 31051
    name: zabbix-trapper
  - port: 162
    targetPort: 1162
    protocol: UDP
    name: snmp-trap
  selector:
    name: zabbix-server
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-java-gateway
  labels:
    app: zabbix
  namespace: zabbix-bft
spec:
  ports:
  - port: 10052
    targetPort: 10052
    name: zabbix-jmx
  selector:
    name: zabbix-java-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-service
  labels:
    app: zabbix
  namespace: zabbix-bft
spec:
  ports:
  - port: 10053
    targetPort: 10053
    name: zabbix-web-svc
  selector:
    name: zabbix-web-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  labels:
    app: zabbix
    tier: server
    environment: dev
  namespace: zabbix-bft
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      name: zabbix-server
      app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-server
        app: zabbix
    spec:
      volumes:
       - name: zabbix-snmptraps
         emptyDir: {}
      containers:
        - name: zabbix-server
          image: zabbix/zabbix-server-pgsql:alpine-6.2-latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "4096Mi"
              cpu: "4000m"
            limits:
              memory: "8128Mi"
              cpu: "8000m"
          ports:
          - containerPort: 10051
            protocol: TCP
            name: zabbix-trapper
          readinessProbe:
            tcpSocket:
              port: zabbix-trapper
            initialDelaySeconds: 300
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: zabbix-trapper
            initialDelaySeconds: 300
            periodSeconds: 60
          volumeMounts:
          - name: zabbix-snmptraps
            mountPath: "/var/lib/zabbix/snmptraps"
            readOnly: true
          startupProbe:
            tcpSocket:
              port: 10051
            initialDelaySeconds: 300
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 40
          livenessProbe:
            tcpSocket:
              port: 10051
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 10
          securityContext:
            capabilities: {}
            privileged: false
        - name: zabbix-snmptraps
          image: zabbix/zabbix-snmptraps:alpine-6.2-latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 1162
            protocol: UDP
            name: snmp-trap
          volumeMounts:
          - name: zabbix-snmptraps
            mountPath: /var/lib/zabbix/snmptraps/
            readOnly: false
          securityContext:
            capabilities: {}
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-java-gateway
  labels:
    app: zabbix
    tier: java
  namespace: zabbix-bft
spec:
  selector:
    matchLabels:
     name: zabbix-java-gateway
     app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-java-gateway
        app: zabbix
    spec:
      containers:
        - name: zabbix-java-gateway
          image: zabbix/zabbix-java-gateway:alpine-6.2-latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 10052
            protocol: TCP
            name: zabbix-java
          livenessProbe:
            tcpSocket:
              port: 10052
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 2
          securityContext:
            capabilities: {}
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-service
  labels:
    app: zabbix
    tier: web-service
  namespace: zabbix-bft
spec:
  selector:
    matchLabels:
     name: zabbix-web-service
     app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-web-service
        app: zabbix
    spec:
      containers:
        - name: zabbix-web-service
          image: zabbix/zabbix-web-service:alpine-6.2-latest
          imagePullPolicy: IfNotPresent
          resources:
           limits:
            cpu: 100m
            memory: 512Mi
           requests:
            cpu: 100m
            memory: 512Mi
          ports:
          - containerPort: 10053
            protocol: TCP
            name: zabbix-web-svc
          livenessProbe:
            tcpSocket:
              port: 10053
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 2
          securityContext:
            capabilities: {}
            privileged: false
