Zabbix manifests/zabbix-server-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zabbix-server
  namespace: zabbix-bft
spec:
  routes:
    - match: HostSNI(`zabbix-server.bft.local`)
      services:
       - name: zabbix-server
         port: 10051
