Zabbix manifests/zabbix-web-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zabbix
  namespace: zabbix-bft
spec:
  routes:
    - kind: Rule
      match: Host(`zabbix.bft.local`)
      priority: 10
      services:
        - kind: Service
          name: zabbix-web
          namespace: zabbix-bft
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              sameSite: none
              secure: true
          strategy: RoundRobin
  tls:
    domains:
      - main: zabbix.bft.local
    secretName: zabbix-ca-all
